<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="luxurysky.clubmanager.view.playerdetail.PlayerDetailFragment"
    tools:showIn="@layout/activity_player_detail">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/playerPhoto"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="fitXY"
                app:layout_constraintDimensionRatio="16:9"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <LinearLayout
                android:id="@+id/playerNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/playerPhoto">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginStart="4dp"
                    android:text="@string/prompt_name"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/playerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingEnd="12dp"
                    android:paddingStart="12dp"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/playerSquadNumberLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/playerNameLayout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginStart="4dp"
                    android:text="@string/prompt_squad_number"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/playerSquadNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_squad_number"
                    android:inputType="number"
                    android:maxLines="1"
                    android:paddingEnd="12dp"
                    android:paddingStart="12dp"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/playerPositionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/playerSquadNumberLayout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginStart="4dp"
                    android:text="@string/prompt_position"
                    android:textSize="12sp" />

                <Spinner
                    android:id="@+id/playerPosition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@android:array/phoneTypes"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp" />

            </LinearLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/playerWeightLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/playerHeightLayout"
                app:layout_constraintTop_toBottomOf="@id/playerPositionLayout">

                <TextView
                    android:id="@+id/playerWeightTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginStart="4dp"
                    android:text="@string/prompt_weight"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <EditText
                    android:id="@+id/playerWeight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_weight"
                    android:inputType="number"
                    android:maxLength="5"
                    android:maxLines="1"
                    android:paddingEnd="12dp"
                    android:paddingStart="12dp"
                    android:singleLine="true"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/kg"
                    app:layout_constraintTop_toBottomOf="@id/playerWeightTitle" />

                <TextView
                    android:id="@+id/kg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="kg"
                    app:layout_constraintBottom_toBottomOf="@id/playerWeight"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/playerWeight" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/playerHeightLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintLeft_toRightOf="@id/playerWeightLayout"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/playerPositionLayout">

                <TextView
                    android:id="@+id/playerHeightTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginStart="4dp"
                    android:text="@string/prompt_height"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <EditText
                    android:id="@+id/playerHeight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_height"
                    android:inputType="number"
                    android:maxLength="5"
                    android:maxLines="1"
                    android:paddingEnd="12dp"
                    android:paddingStart="12dp"
                    android:singleLine="true"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/cm"
                    app:layout_constraintTop_toBottomOf="@id/playerHeightTitle" />

                <TextView
                    android:id="@+id/cm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="cm"
                    app:layout_constraintBottom_toBottomOf="@id/playerHeight"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/playerHeight" />

            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/loadingProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
